--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Tetromino-based puzzle game" />
     <title>Notris</title>
